Implements Singlton pattern

--- a/Assets/ToDo.txt
+++ b/Assets/ToDo.txt
@@ -3,8 +3,8 @@ Design Patterns to implement
 1- Factory ✔  "Creational"
 2- Command ✔	"behavioral"
 3- Observer ✔	"behavioral"
-4- FlyWeight		"Structural"
-5- Singlton		"Creational"
+4- FlyWeight ✔		"Structural"
+5- Singlton ✔	"Creational"
 6- State		"behavioral"
 7- Strategy	✔	" behavioral " "Minimizing the duplication code and decoupling classes behaviors are defined as seprete interfaces - composition over inheritance"
 8- Prototype		"Creational"
